chore: change package name to correct @lilt namespace and ignore .npmrc

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spectacle-docs",
+  "name": "@lilt/spectacle",
   "version": "1.6.0",
   "description": "Generate beautiful static API documentation from OpenAPI/Swagger 2.0 specifications",
   "preferGlobal": true,
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sourcey/spectacle.git"
+    "url": "git+https://github.com/lilt/spectacle"
   },
   "engines": {
     "node": ">=8"
