--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "chai": "^4.3.4",
     "mocha": "^9.0.2"
   },
-  "resolutions": {
-    "minimatch": "^3.0.0",
+  "overrides": {
+    "minimatch": "3.0.5",
     "lodash.merge": "^4.0.0"
   }
 }
