fix: ansi-regex

--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
   },
   "overrides": {
     "minimatch": "3.0.5",
-    "lodash.merge": "^4.0.0"
+    "lodash.merge": "^4.0.0",
+    "chalk": {
+      "has-ansi": "5.0.1"
+    }
   }
 }
